# signalforge

./: .gitignore  MODULE.bazel  README.md  WORKSPACE
cpp/backtest/: BUILD.bazel  position_tracker.h  position_tracker_test.cpp  postion_tracker.cpp  results.h  strategy.h
cpp/execution/: BUILD.bazel  execution_test.cpp  trade_through_execution.h
cpp/interfaces/: BUILD.bazel  execution_model.h  market_view.h
cpp/main/: BUILD.bazel  main.cpp
cpp/market/: BUILD.bazel  trade_only_market_view.h
cpp/orderbook/: BUILD.bazel  order_book.cpp  order_book.h  order_book_test.cpp
cpp/trades/: BUILD.bazel  data_manager.cpp  data_manager.h  data_manager_test.cpp  example_backtest.cpp  example_usage.cpp  trade_csv_loader.cpp  trade_csv_loader.h  trade_csv_loader_test.cpp
scripts/: download_binance_data.sh
